tests/valid/localhides.nim
var a = 1
for i in 1 .. 10:
  var locala = 2
  for j in 2 .. 3:
    var locallocala = 3
